--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 
-  <title>Vite + React</title>
+  <title>Tailwind</title>
 </head>
 
 <body>
